# Products-List-App

./: README.md
Client/: CMakeLists.txt  ClientQt5.cpp  ClientQt5.h  JsonParser.cpp  JsonParser.h  ProductListItem.h  Request.h  ResponseHandler.cpp  UserActivityHandler.cpp  UserActivityHandler.h  WindowSetup.cpp  WindowSetup.h  main.cpp  stylesheet.qss
ClientTesting/: CMakeLists.txt  MainWindowTesting.cpp  MainWindowTesting.h  main.cpp
Server/: CMakeLists.txt  JsonParser.cpp  JsonParser.h  NewServer.cpp  NewServer.h  ProductListItem.cpp  ProductListItem.h  Request.h  RequestsHandler.cpp  RequestsHandler.h  Session.cpp  Session.h  Storage.cpp  Storage.h  User.cpp  User.h  main.cpp
ServerTesting/: CMakeLists.txt  JsonParserTesting.cpp  RequestHandlerTesting.cpp  StorageTesting.cpp  main.cpp
